Atualização da classe do histórico